--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 								<div class="text-[#90A4B1] text-xs">January, 11</div>
 							</div>
 							
-							<h1 class="flex items-center justify-center h-full">Article 1</h1>
+							<h1 class="flex items-center justify-center h-full">Article 2</h1>
 						</article>
 					</a>
 					<li class="aspect-square p-4 border-[#E6E7EC] border-solid border-[1px] w-1/2 sm:w-1/4 m-[-1px_0_0_-1px]" >
@@ -74,7 +74,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 									<div class="text-[#90A4B1] text-xs">January, 11</div>
 								</div>
 								
-								<h1 class="flex items-center justify-center h-full">Article 1</h1>
+								<h1 class="flex items-center justify-center h-full">Article 3</h1>
 							</article>
 						</a>
 					</li>
@@ -86,7 +86,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 									<div class="text-[#90A4B1] text-xs">January, 11</div>
 								</div>
 								
-								<h1 class="flex items-center justify-center h-full">Article 1</h1>
+								<h1 class="flex items-center justify-center h-full">Article 4</h1>
 							</article>
 						</a>
 					</li>
@@ -98,7 +98,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 									<div class="text-[#90A4B1] text-xs">January, 11</div>
 								</div>
 								
-								<h1 class="flex items-center justify-center h-full">Article 1</h1>
+								<h1 class="flex items-center justify-center h-full">Article 5</h1>
 							</article>
 						</a>
 					</li>
@@ -110,7 +110,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 									<div class="text-[#90A4B1] text-xs">January, 11</div>
 								</div>
 								
-								<h1 class="flex items-center justify-center h-full">Article 1</h1>
+								<h1 class="flex items-center justify-center h-full">Article 6</h1>
 							</article>
 						</a>
 					</li>
@@ -183,81 +183,51 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				background-size: cover;
 				mix-blend-mode: lighten;
 				will-change: opacity;
-				/* opacity: 0;
-				transition: opacity .3s ease-in-out; */
+				background-blend-mode: multiply;
 		}
 
 		&::after {
 			/* filter: url('#effect-1'); */
-			backdrop-filter: url('#effect-1');
+			background-image: linear-gradient(#C8AD49, #C8AD49), url('/images/gustavo-cordeiro-profile-picture.png');
 			transform: translate(2%, 0);		
 			animation: glitch-animation 3s ease-in-out infinite both;
-			/* animation-play-state: paused; */
 		}
 
 		&::before {
 			/* filter: url('#effect-2'); */
-			backdrop-filter: url('#effect-2');
+			background-image: linear-gradient(#E26D3C, #E26D3C), url('/images/gustavo-cordeiro-profile-picture.png');
 			transform: translate(0, -2%);
 			animation: glitch-animation2 3s ease-in-out infinite both;
-			/* animation-play-state: paused; */
 		}
 
 		& > picture::before {
 			/* filter: url('#effect-3'); */
-			backdrop-filter: url('#effect-3');
+			background-image: linear-gradient(#5499D7, #5499D7), url('/images/gustavo-cordeiro-profile-picture.png');
 			transform: translate(0, 2%);
 			animation: glitch-animation3 3s ease-in-out infinite both;
-			/* animation-play-state: paused; */
-		}
-
-		&:hover {
-			/* &::before, &::after, & > picture::before {
-				opacity: 1;
-			} */
-
-			/* &::before {
-				filter: url('#effect-3');
-			} */
-			
-			/* &::after {
-				transform: translate(-2%, -2%);
-				/* animation: glitch-animation 3s ease-in-out infinite both reverse; */
-			/* } 
-
-			&::before {
-				transform: translate(2%,2%);
-				/* animation: glitch-animation 3s ease-in-out infinite both; */
-			/* } */
 		}
 	}
 
 	.text-shadow {
 		text-shadow: .03em 0px 0 #C8AD49, 0px -.03em 0 #E26D3C, 0px .03em 0 #5499D7;		
 		animation: text-shadow-glitch 3s ease-in-out infinite both;
-		/* animation-play-state: paused; */
-		/* text-shadow: -.03em -.03em 0 #C8AD49, -.03em -.03em 0 #E26D3C, .03em .03em 0 #5499D7; */
 	}
 
 	.glitch-cotainer {
 		&:hover {
 			& .text-shadow {
-				/* animation: text-shadow-glitch 3s ease-in-out infinite forwards; */
 				animation-play-state: running;
 			}
 			& .glitch-filter {
 				&::after {
-					/* animation: glitch-animation 3s ease-in-out infinite forwards; */
 					animation-play-state: running;
 				}
 
 				&::before {
-					/* animation: glitch-animation2 3s ease-in-out infinite forwards; */
 					animation-play-state: running;
 				}
 
 				& > picture::before {
-					/* animation: glitch-animation3 3s ease-in-out infinite forwards; */
 					animation-play-state: running;
 				}
 			}
@@ -270,51 +240,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			
 		}
 		
-		/* 65% {
-			text-shadow: 0px -.03em 0 #5499D7, 0px .03em 0 #E26D3C, -.03em 0px 0 #C8AD49;
-		} */
-
 		65% {
 			text-shadow: 0px .03em 0 #C8AD49, 0px -.03em 0 #E26D3C, .03em 0px 0  #5499D7;
-			/* text-shadow: .05em 0px 0 #C8AD49, 0px -.05em 0 #E26D3C, 0px .05em 0 #5499D7; */
 		}
 		
 
-		/* 40% {
-			text-shadow: 0px -.01em 0 #C8AD49, 0px .03em 0 #E26D3C, -.03em 0px 0 #5499D7;
-		}
-
-		60% {
-			text-shadow: 0px -.02em 0 #C8AD49, 0px -.03em 0 #E26D3C, 0px .03em 0 #5499D7;
-		}
-
-		80% {
-			text-shadow: 0px -.03em 0 #C8AD49, 0px .03em 0 #E26D3C, -.03em 0px 0 #5499D7;
-		}
-		*/
-
 		100% {
 			text-shadow: .03em 0px 0 #C8AD49, 0px -.03em 0 #E26D3C, 0px .03em 0 #5499D7;
-		} 
-
-		/* 0% {
-			text-shadow: -.03em -.03em 0 #C8AD49, -.03em -.03em 0 #E26D3C, .03em .03em 0 #5499D7;
 		}
-		20% {
-			text-shadow: .03em -.03em 0 #C8AD49, -.03em .03em 0 #E26D3C, -.03em .03em 0 #5499D7;
-		}
-		40% {
-			text-shadow: .03em .03em 0 #C8AD49, .03em .03em 0 #E26D3C, -.03em -.03em #5499D7;
-		}
-		60% {
-			text-shadow: -.03em .03em 0 #C8AD49, .03em -.03em 0 #E26D3C, -.03em -.03em 0 #5499D7;
-		}
-		80% {
-			text-shadow: -.03em -.03em 0 #C8AD49, -.03em -.03em 0 #E26D3C, .03em -.03em 0 #5499D7;
-		}
-		100% {
-			transform: translate(0);
-		} */
 	}
 
 	@keyframes glitch-animation {
