feat(layout): Moving Components to own files and improve layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,10 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
+import PictureGlitchEffect from '../components/PictureGlitchEffect.vue';
+import BaseLayout from '../layouts/BaseLayout.vue';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import NavigationBar from '../components/NavigationBar.vue';
+import PostList from '../components/PostList.vue';
 ---
 
 <!DOCTYPE html>
@@ -8,288 +12,63 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="bg-[#262729] text-[#E6E7EC]">
-		<div class="container p-8 mx-auto">
-			<div class="flex relative flex-wrap items-center content-center glitch-cotainer mb-8">
-				<div class="w-full aspect-square sm:w-1/4 flex-grow h-full glitch-filter">
-					<picture>
-						<img src="/images/gustavo-cordeiro-profile-picture.png" alt="The Gustavo Cordeiro Profile Picture" class="w-auto h-full"/>
-					</picture>
-				</div>
-				<div class="w-full text-center sm:text-left -mt-[45%] pb-3 sm:mt-0 z-10  bg-gradient-to-t from-[#262729] sm:bg-transparent sm:w-3/4 flex-grow 2xl:pl-20 sm:pl-10">
-					<h1 class="text-[12vw] sm:text-[8vw] 2xl:text-[8em] text-shadow leading-tight">Gustavo<br/>Cordeiro</h1>
-					<h2 class="text-[4vw] sm:text-[2vw] 2xl:text-[2em] text-[#90A4B1]">Front-end facilitator</h2>
-				</div>
-
-				<nav class="w-full mt-4 -mx-8 sm:mt-0 sm:w-auto flex-grow-[3] sm:absolute sm:right-0 sm:top-0">
-					<ul class="flex flex-nowrap whitespace-nowrap overflow-x-scroll pb-2 sm:flex-col text-xs leading-[2.8!important]">
-						<li class="font-cameo first-of-type:ml-8 sm:first-of-type:ml-0 px-3 sm:px-0 border-[#E6E7EC] border-solid border-[1px] sm:border-none mr-5">
-							<a href="#" class="">All posts</a>
-						</li>
-						<li class="first-of-type:ml-8 px-3 sm:px-0 border-[#E6E7EC] border-solid border-[1px] sm:border-none mr-5">
-							<a href="#" class="">Architecture</a>
-						</li>
-						<li class="first-of-type:ml-8 px-3 sm:px-0 border-[#E6E7EC] border-solid border-[1px] sm:border-none mr-5">
-							<a href="#" class="">The Nature of Code</a>
-						</li>
-						<li class="first-of-type:ml-8 px-3 sm:px-0 border-[#E6E7EC] border-solid border-[1px] sm:border-none mr-5">
-							<a href="#" class="">About me</a>
-						</li>
-						<li class="first-of-type:ml-8 px-3 sm:px-0 border-[#E6E7EC] border-solid border-[1px] sm:border-none mr-5">
-							<a href="#" class="">Search</a>
-						</li>
-					</ul>
-				</nav>
+	<BaseLayout>
+		
+		<div class="flex relative flex-wrap items-center content-center my-4 sm:my-8">
+			<PictureGlitchEffect src="/images/gustavo-cordeiro-profile-picture.png" class="w-full aspect-square sm:w-1/4 flex-grow h-full">
+				<img src="/images/gustavo-cordeiro-profile-picture.png" alt="The Gustavo Cordeiro Profile Picture" class="w-full object-cover object-center" />
+			</PictureGlitchEffect>
+			<div class="absolute w-full sm:static bottom-0 text-center sm:text-left pb-3 sm:mt-0 z-10 bg-gradient-to-t from-[#262729] sm:bg-none sm:w-3/4 flex-grow 2xl:pl-20 sm:pl-10">
+				<h1 class="text-[12vw] sm:text-[8vw] lg:text-[8em] text-glitch-effect leading-tight">Gustavo<br/>Cordeiro</h1>
+				<h2 class="text-[4vw] sm:text-[2vw] lg:text-[2em] text-[#90A4B1]">Front-end facilitator</h2>
 			</div>
-
-			<ol class="flex flex-wrap">
-				<li class="aspect-square p-4 border-[#E6E7EC] border-solid border-[1px] w-1/2 sm:w-1/4 m-[-1px_0_0_-1px]" >
-					<a href="#" class="block">
-						<article class="aspect-square relative">
-							<div class="absolute">
-								<div class="text-[#DC6439] text-xs">About me</div>
-								<div class="text-[#90A4B1] text-xs">January, 11</div>
-							</div>
-							
-							<h1 class="flex items-center justify-center h-full">Article 1</h1>
-						</article>
-					</a>
-				</li>
-				<li class="aspect-square p-4 border-[#E6E7EC] border-solid border-[1px] w-1/2 sm:w-1/4 m-[-1px_0_0_-1px]" >
-					<a href="#" class="block">
-						<article class="aspect-square relative">
-							<div class="absolute">
-								<div class="text-[#DC6439] text-xs">About me</div>
-								<div class="text-[#90A4B1] text-xs">January, 11</div>
-							</div>
-							
-							<h1 class="flex items-center justify-center h-full">Article 2</h1>
-						</article>
-					</a>
-					<li class="aspect-square p-4 border-[#E6E7EC] border-solid border-[1px] w-1/2 sm:w-1/4 m-[-1px_0_0_-1px]" >
-						<a href="#" class="block">
-							<article class="aspect-square relative">
-								<div class="absolute">
-									<div class="text-[#DC6439] text-xs">About me</div>
-									<div class="text-[#90A4B1] text-xs">January, 11</div>
-								</div>
-								
-								<h1 class="flex items-center justify-center h-full">Article 3</h1>
-							</article>
-						</a>
-					</li>
-					<li class="aspect-square p-4 border-[#E6E7EC] border-solid border-[1px] w-1/2 sm:w-1/4 m-[-1px_0_0_-1px]" >
-						<a href="#" class="block">
-							<article class="aspect-square relative">
-								<div class="absolute">
-									<div class="text-[#DC6439] text-xs">About me</div>
-									<div class="text-[#90A4B1] text-xs">January, 11</div>
-								</div>
-								
-								<h1 class="flex items-center justify-center h-full">Article 4</h1>
-							</article>
-						</a>
-					</li>
-					<li class="aspect-square p-4 border-[#E6E7EC] border-solid border-[1px] w-1/2 sm:w-1/4 m-[-1px_0_0_-1px]" >
-						<a href="#" class="block">
-							<article class="aspect-square relative">
-								<div class="absolute">
-									<div class="text-[#DC6439] text-xs">About me</div>
-									<div class="text-[#90A4B1] text-xs">January, 11</div>
-								</div>
-								
-								<h1 class="flex items-center justify-center h-full">Article 5</h1>
-							</article>
-						</a>
-					</li>
-					<li class="aspect-square p-4 border-[#E6E7EC] border-solid border-[1px] w-1/2 sm:w-1/4 m-[-1px_0_0_-1px]" >
-						<a href="#" class="block">
-							<article class="aspect-square relative">
-								<div class="absolute">
-									<div class="text-[#DC6439] text-xs">About me</div>
-									<div class="text-[#90A4B1] text-xs">January, 11</div>
-								</div>
-								
-								<h1 class="flex items-center justify-center h-full">Article 6</h1>
-							</article>
-						</a>
-					</li>
-				</li>
-			</ol>
 		</div>
 
-			
-		<svg id="svgfilters" aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-			<defs>
-				<filter id="effect-1" x="-10%" y="-10%" width="120%" height="120%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-					<feColorMatrix type="matrix" values="1 0 0 0 0
-				1 0 0 0 0
-				1 0 0 0 0
-				0 0 0 1 0" in="SourceGraphic" result="colormatrix"/>
-					<feComponentTransfer in="colormatrix" result="componentTransfer">
-								<feFuncR type="table" tableValues="0.89"/>
-						<feFuncG type="table" tableValues="0.43"/>
-						<feFuncB type="table" tableValues="0.24"/>
-						<feFuncA type="table" tableValues="0 1"/>
-						</feComponentTransfer>
-					<feBlend mode="multiply" in="componentTransfer" in2="SourceGraphic" result="blend"/>
-				</filter>
-				<filter id="effect-2" x="-10%" y="-10%" width="120%" height="120%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-					<feColorMatrix type="matrix" values="1 0 0 0 0
-				1 0 0 0 0
-				1 0 0 0 0
-				0 0 0 1 0" in="SourceGraphic" result="colormatrix"/>
-					<feComponentTransfer in="colormatrix" result="componentTransfer">
-								<feFuncR type="table" tableValues="0.78"/>
-						<feFuncG type="table" tableValues="0.68"/>
-						<feFuncB type="table" tableValues="0.29"/>
-						<feFuncA type="table" tableValues="0 1"/>
-						</feComponentTransfer>
-					<feBlend mode="multiply" in="componentTransfer" in2="SourceGraphic" result="blend"/>
-				</filter>
-				<filter id="effect-3" x="-10%" y="-10%" width="120%" height="120%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-					<feColorMatrix type="matrix" values="1 0 0 0 0
-				1 0 0 0 0
-				1 0 0 0 0
-				0 0 0 1 0" in="SourceGraphic" result="colormatrix"/>
-					<feComponentTransfer in="colormatrix" result="componentTransfer">
-							<feFuncR type="table" tableValues="0.33"/>
-							<feFuncG type="table" tableValues="0.6"/>
-							<feFuncB type="table" tableValues="0.84"/>
-							<feFuncA type="table" tableValues="0 1"/>
-						</feComponentTransfer>
-					<feBlend mode="multiply" in="componentTransfer" in2="SourceGraphic" result="blend"/>
-				</filter>
-			</defs>
-		</svg>
-	</body>
+		<NavigationBar
+			currentLocation={Astro.url}
+			links={[
+				{text: 'All Posts', href:'/'},
+				{text: 'Architecture', href:'/architecture'},
+				{text: 'The Nature of Code', href:'/the-nature-of-code'},
+				{text: 'About me', href:'/about-me',},
+				{text: 'Search', href:'/search'},
+			]}
+		/>
+
+		<PostList posts={[
+			{
+				tag: 'about-me',
+				publishedAt: 'January, 11',
+				title: 'Article 1',
+				anchor: {
+					href: '#',
+				}
+			},
+			{
+				tag: 'about-me',
+				publishedAt: 'January, 11',
+				title: 'Article 2',
+				anchor: {
+					href: '#',
+				}
+			},
+			{
+				tag: 'about-me',
+				publishedAt: 'January, 11',
+				title: 'Article 3',
+				anchor: {
+					href: '#',
+				}
+			},
+			{
+				tag: 'about-me',
+				publishedAt: 'January, 11',
+				title: 'Article 4',
+				anchor: {
+					href: '#',
+				}
+			},
+		]}/>
+		
+	</BaseLayout>
 </html>
-
-<style>
-
-	.glitch-filter {
-		position: relative;
-
-		&::before, &::after, & > picture::before {
-				content: '';
-				background: url('/images/gustavo-cordeiro-profile-picture.png');
-				position:absolute;
-				top:0px;
-				left:0px;
-				z-index: 2;
-				width: 100%;
-				height: 100%;
-				transform: translate(0, 0);
-				background-size: cover;
-				mix-blend-mode: lighten;
-				will-change: opacity;
-				background-blend-mode: multiply;
-		}
-
-		&::after {
-			/* filter: url('#effect-1'); */
-			background-image: linear-gradient(#C8AD49, #C8AD49), url('/images/gustavo-cordeiro-profile-picture.png');
-			transform: translate(2%, 0);		
-			animation: glitch-animation 3s ease-in-out infinite both;
-		}
-
-		&::before {
-			/* filter: url('#effect-2'); */
-			background-image: linear-gradient(#E26D3C, #E26D3C), url('/images/gustavo-cordeiro-profile-picture.png');
-			transform: translate(0, -2%);
-			animation: glitch-animation2 3s ease-in-out infinite both;
-		}
-
-		& > picture::before {
-			/* filter: url('#effect-3'); */
-			background-image: linear-gradient(#5499D7, #5499D7), url('/images/gustavo-cordeiro-profile-picture.png');
-			transform: translate(0, 2%);
-			animation: glitch-animation3 3s ease-in-out infinite both;
-		}
-	}
-
-	.text-shadow {
-		text-shadow: .03em 0px 0 #C8AD49, 0px -.03em 0 #E26D3C, 0px .03em 0 #5499D7;		
-		animation: text-shadow-glitch 3s ease-in-out infinite both;
-	}
-
-	.glitch-cotainer {
-		&:hover {
-			& .text-shadow {
-				animation-play-state: running;
-			}
-			& .glitch-filter {
-				&::after {
-					animation-play-state: running;
-				}
-
-				&::before {
-					animation-play-state: running;
-				}
-
-				& > picture::before {
-					animation-play-state: running;
-				}
-			}
-		}
-	}
-	
-	@keyframes text-shadow-glitch {
-		0% {
-			text-shadow: .03em 0px 0 #C8AD49, 0px -.03em 0 #E26D3C, 0px .03em 0 #5499D7;
-			
-		}
-		
-		65% {
-			text-shadow: 0px .03em 0 #C8AD49, 0px -.03em 0 #E26D3C, .03em 0px 0  #5499D7;
-		}
-		
-
-		100% {
-			text-shadow: .03em 0px 0 #C8AD49, 0px -.03em 0 #E26D3C, 0px .03em 0 #5499D7;
-		}
-	}
-
-	@keyframes glitch-animation {
-		0% {
-			transform: translate(2%, 0);
-		}
-		
-		50% {
-			transform: translate( 0, -2%);
-		}
-		
-		100% {
-			transform: translate(2%, 0);
-		}
-	}
-
-	@keyframes glitch-animation2 {
-		0% {
-			transform: translate(0, -2%);
-		}
-		
-		50% {
-			transform: translate( 2%, 0);
-		}
-		
-		100% {
-			transform: translate(0, -2%);
-		}
-	}
-
-	@keyframes glitch-animation3 {
-		0% {
-			transform: translate(0, 2%);
-		}
-		
-		50% {
-			transform: translate( -2%, 0);
-		}
-		
-		100% {
-			transform: translate(0, 2%);
-		}
-	}
-	
-</style>
