--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -11,7 +11,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description, image = '/images/gustavo-cordeiro-profile-picture.png' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -21,25 +21,15 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preload" href="/fonts/User-BoldCameo.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-ExtraLight.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-ExtraLightCameo.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-Hairline.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-HairlineCameo.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-Light.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-LightCameo.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-Medium.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="preload" href="/fonts/User-MediumCameo.woff2" as="font" type="font/woff2" crossorigin />
-
-
-
-
-
-
-
-
-
-
+<link rel="preload" href="/fonts/User-BoldCameo.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-ExtraLight.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-ExtraLightCameo.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-Hairline.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-HairlineCameo.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-LightCameo.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+<link rel="preload" href="/fonts/User-MediumCameo.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
