--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,8 @@
+@import "tailwindcss/base";
 @import './base/index.css';
-@import 'utilities/index.css';
 
+@import "tailwindcss/components";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/utilities";
+@import './utilities/index.css';
+
