--- a/src/styles/utilities/index.css
+++ b/src/styles/utilities/index.css
@@ -1,2 +1,5 @@
-@import "./animista/index.css";
-@import "./text.css";
+/* @layer utilities { */
+  @import "./animista/index.css";
+  @import "./text.css";
+  @import "glitchEffect.scss";
+/* } */
