--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,10 @@ import PostList from '../components/PostList.vue';
 				<img src="/images/gustavo-cordeiro-profile-picture.png" alt="The Gustavo Cordeiro Profile Picture" class="w-full object-cover object-center" />
 			</PictureGlitchEffect>
 			<div class="absolute w-full sm:static bottom-0 text-center sm:text-left max-sm:pb-3 sm:mt-0 z-10 bg-gradient-to-t from-[#262729] sm:bg-none sm:w-3/4 flex-grow sm:pl-4 md:pl-10  ">
-				<h1 class="max-sm:text-6xl text-[8vw] 2xl:text-[9rem] group-hover:glitch-text leading-tight" data-text="Gustavo Cordeiro">Gustavo Cordeiro</h1>
+				<h1 class="max-sm:text-6xl text-[8vw] 2xl:text-[9rem] leading-tight">
+					<span class="glitch-text [--direction:alternate]" data-text="Gustavo">Gustavo</span>
+					<span class="glitch-text [--direction:alternate-reverse] state" data-text="Cordeiro">Cordeiro</span>
+				</h1>
 				<h2 class="max-sm:text-2xl text-[3vw] 2xl:text-5xl text-[#90A4B1]">Front-end facilitator</h2>
 			</div>
 		</div>
