--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import PostList from '../components/PostList.vue';
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-hidden">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
@@ -18,7 +18,7 @@ import PostList from '../components/PostList.vue';
 			<PictureGlitchEffect src="/images/gustavo-cordeiro-profile-picture.png" class="w-full aspect-square sm:w-1/4 flex-grow h-full">
 				<img src="/images/gustavo-cordeiro-profile-picture.png" alt="The Gustavo Cordeiro Profile Picture" class="w-full object-cover object-center" />
 			</PictureGlitchEffect>
-			<div class="absolute w-full sm:static bottom-0 text-center sm:text-left max-sm:pb-3 sm:mt-0 z-10 bg-gradient-to-t from-[#262729] sm:bg-none sm:w-3/4 flex-grow sm:pl-4 md:pl-10  ">
+			<div class="absolute w-full sm:static bottom-0 text-center sm:text-left max-sm:pb-3 sm:mt-0 bg-gradient-to-t from-background sm:bg-none sm:w-3/4 flex-grow sm:pl-4 md:pl-10  ">
 				<h1 class="max-sm:text-6xl text-[8vw] 2xl:text-[9rem] leading-tight">
 					<span class="glitch-text [--delay:420]" data-text="Gustavo">Gustavo</span>
 					<span class="glitch-text [--direction:alternate-reverse] state" data-text="Cordeiro">Cordeiro</span>
