--- a/src/styles/utilities/text.css
+++ b/src/styles/utilities/text.css
@@ -1,22 +1,22 @@
 @layer utilities {
   .text-glitch-effect {
-    text-shadow: 2px 0px 0 #C8AD49, 0px -2px 0 #E26D3C, 0px 2px 0 #5499D7;		
-    /* animation: text-glitch-animation 2s linear infinite both; */
+    text-shadow: 2px 0px 0 theme(colors.glicth.g), 0px -2px 0 theme(colors.glicth.r), 0px 2px 0 theme(colors.glicth.b);		
+    animation: text-glitch-animation 2s linear infinite both;
   }
 
 
   @keyframes text-glitch-animation {
     0% {
-      text-shadow: 2px 0px 0 #C8AD49, 0px -2px 0 #E26D3C, 0px 2px 0 #5499D7; 
+      text-shadow: 2px 0px 0 theme(colors.glicth.g), 0px -2px 0 theme(colors.glicth.r), 0px 2px 0 theme(colors.glicth.b); 
     }
     
     65% {
-      text-shadow: 0px -2px 0 #C8AD49, 0px 2px 0 #E26D3C, 2px 0px 0  #5499D7;
+      text-shadow: 0px -2px 0 theme(colors.glicth.g), 0px 2px 0 theme(colors.glicth.r), 2px 0px 0  theme(colors.glicth.b);
     }
     
 
     100% {
-      text-shadow: 2px 0px 0 #C8AD49, 0px -2px 0 #E26D3C, 0px 2px 0 #5499D7;
+      text-shadow: 2px 0px 0 theme(colors.glicth.g), 0px -2px 0 theme(colors.glicth.r), 0px 2px 0 theme(colors.glicth.b);
     }
   }
 }
